--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ aqt = "^24.4.1"
 icecream = "^2.1.3"
 mypy = "^1.10.0"
 openpyxl = "^3.1.2"
+pre-commit = "^3.7.1"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
