--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,11 +11,13 @@ repos:
   hooks:
     - id: pylint
       args: [
-        "--disable", "missing-module-docstring,missing-function-docstring,missing-class-docstring"
+        "--disable", "missing-module-docstring,missing-function-docstring,missing-class-docstring",
+        "--max-line-length", "120",
       ]
       language_version: python
       additional_dependencies:
         - requests
+        - beautifulsoup4
 
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v1.9.0
@@ -25,6 +27,7 @@ repos:
       language_version: python
       additional_dependencies:
         - types-requests
+        - types-beautifulsoup4
 
 - repo: https://github.com/codespell-project/codespell
   rev: v2.2.6
