--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,7 @@ repos:
       additional_dependencies:
         - requests
         - beautifulsoup4
+        - PyPDF2
 
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v1.9.0
@@ -28,6 +29,7 @@ repos:
       additional_dependencies:
         - types-requests
         - types-beautifulsoup4
+        - PyPDF2
 
 - repo: https://github.com/codespell-project/codespell
   rev: v2.2.6
