--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ icecream = "^2.1.3"
 mypy = "^1.10.0"
 openpyxl = "^3.1.2"
 pre-commit = "^3.7.1"
+pypdf2 = "^3.0.1"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
