--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,8 @@ exclude = [".cache"]
 
 [tool.ruff]
 # https://beta.ruff.rs/docs/configuration/
-select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
-ignore = ['W291', 'W292', 'W293']
+lint.select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
+lint.ignore = ['W291', 'W292', 'W293']
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
