--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ mypy = "^1.10.0"
 openpyxl = "^3.1.2"
 pre-commit = "^3.7.1"
 pypdf2 = "^3.0.1"
+pysat = "^3.2.0"
+sympy = "^1.12.1"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
