--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,7 @@ repos:
       additional_dependencies:
         - requests
         - beautifulsoup4
+        - tqdm
         - PyPDF2
 
 - repo: https://github.com/pre-commit/mirrors-mypy
@@ -31,6 +32,8 @@ repos:
         - types-beautifulsoup4
         - PyPDF2
         - icecream
+        - tqdm
+        - types-tqdm
 
 - repo: https://github.com/codespell-project/codespell
   rev: v2.2.6
