--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pysat = "^3.2.0"
 sympy = "^1.12.1"
 tqdm = "^4.66.4"
 types-tqdm = "^4.66.0.20240417"
+pillow = "^10.3.0"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
