--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "python-template"
+name = "english"
 version = "0.1.0"
 description = ""
 authors = ["manhdt <thitkhotau.no1@gmail.com>"]
@@ -14,7 +14,7 @@ undetected-chromedriver = "^3.5.5"
 fake-useragent = "^1.5.1"
 setuptools = "^69.5.1"
 requests = "^2.31.0"
-beautifulsoup4 = "^4.12.3"
+    beautifulsoup4 = "^4.12.3"
 fastapi = "^0.110.2"
 uvicorn = "^0.29.0"
 jinja2 = "^3.1.3"
@@ -32,6 +32,11 @@ sympy = "^1.12.1"
 tqdm = "^4.66.4"
 types-tqdm = "^4.66.0.20240417"
 pillow = "^10.3.0"
+langchain-openai = "^0.2.2"
+langchain = "^0.3.3"
+graphviz = "^0.20.3"
+matplotlib = "^3.9.2"
+networkx = "^3.4.2"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
